Dummy_Package_for_scratch_org/main/default/objects/Sprint__c/fields/ActualVelocity__c.field-meta.xml
<CustomField>
    <fullName>ActualVelocity__c</fullName>
    <label>Actual Velocity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>