Dummy_Package_for_scratch_org/main/default/objects/Sprint__c/fields/Days_in_sprint__c.field-meta.xml
<CustomField>
    <fullName>Days_in_sprint__c</fullName>
    <label>Days in sprint</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>