Dummy_Package_for_scratch_org/main/default/objects/Sprint__c/fields/Full_time_resources_in_sprint__c.field-meta.xml
<CustomField>
    <fullName>Full_time_resources_in_sprint__c</fullName>
    <label>Full time resources in sprint</label>
    <precision>7</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>