Dummy_Package_for_scratch_org/main/default/objects/Sprint__c/fields/InitialPlannedVelocity__c.field-meta.xml
<CustomField>
    <fullName>InitialPlannedVelocity__c</fullName>
    <label>Initial Planned Velocity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>