Dummy_Package_for_scratch_org/main/default/objects/Sprint__c/fields/Objective__c.field-meta.xml
<CustomField>
    <fullName>Objective__c</fullName>
    <label>Sprint Goal</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>