Dummy_Package_for_scratch_org/main/default/objects/Sprint__c/fields/PlannedVelocity__c.field-meta.xml
<CustomField>
    <fullName>PlannedVelocity__c</fullName>
    <label>Planned Velocity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>