Dummy_Package_for_scratch_org/main/default/objects/Sprint__c/fields/Release__c.field-meta.xml
<CustomField>
    <fullName>Release__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Release</label>
    <referenceTo>Release__c</referenceTo>
    <relationshipLabel>Sprints</relationshipLabel>
    <relationshipName>Sprints</relationshipName>
    <type>Lookup</type>
</CustomField>