Dummy_Package_for_scratch_org/main/default/objects/Sprint__c/fields/Team__c.field-meta.xml
<CustomField>
    <fullName>Team__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Team</label>
    <referenceTo>Team__c</referenceTo>
    <relationshipLabel>Sprints</relationshipLabel>
    <relationshipName>Sprints</relationshipName>
    <type>Lookup</type>
</CustomField>