Dummy_Package_for_scratch_org/main/default/objects/Sprint__c/fields/Working_days_in_sprint__c.field-meta.xml
<CustomField>
    <fullName>Working_days_in_sprint__c</fullName>
    <label>Working days in sprint</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>