Dummy_Package_for_scratch_org/main/default/objects/Sprint__c/validationRules/EndDate_Should_be_Greater_than_StartDate.validationRule-meta.xml
<ValidationRule>
    <fullName>EndDate_Should_be_Greater_than_StartDate</fullName>
    <active>true</active>
    <errorConditionFormula>End_Date__c  &lt;=  Start_Date__c</errorConditionFormula>
    <errorMessage>You must introduce an End Date greater than the Start Date.</errorMessage>
</ValidationRule>