Dummy_Package_for_scratch_org/main/default/objects/Sprint__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Project__c</columns>
    <columns>Release__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Status__c</columns>
    <columns>Story_points__c</columns>
    <columns>Days_in_sprint__c</columns>
    <columns>Working_days_in_sprint__c</columns>
    <columns>Full_time_resources_in_sprint__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>